--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/***********************************tag selector**************************************/
+/***********************************tag selector*************************************
 
 body {
 	background: #00b4ff;
@@ -24,10 +24,10 @@ img{
 	height: 300px;
 	width: 500px;
 	border-radius: 25px;
-	
+
 }
 
-/***********************************class selector***************************************/
+/***********************************class selector***************************************
 .top-container
 {
   height: 0;
@@ -35,8 +35,8 @@ img{
   background-color: #f0e5d8;
   margin: 20px auto;
   color:  #314e52;
-}  
-    
+}
+
 .self
 {
 	font-size: 2.5rem;
@@ -59,7 +59,7 @@ img{
 .bottom-container
 {
 	margin-left: 25%;
-	
+
 }
 .boy
 {
@@ -69,7 +69,7 @@ img{
 .footer-link
 {
 	margin: 20px 5%;
-	background-color: #4CAF50; /* Green */
+	background-color: #4CAF50; /* Green *
 	border: none;
 	color: white;
 	padding: 15px 32px;
@@ -79,7 +79,7 @@ img{
 	font-size: 16px;
 }
 
-
+*/
 
 /* ANIMATIONS */
 
@@ -231,4 +231,10 @@ img{
     100% {
         margin-left: 100%;
     }
+}
+img{
+	height: 300px;
+	width: 500px;
+	border-radius: 25px;
+
 }
